static/css/base.css
/* -------------- Hero image ------------- */

.jumbotron {
  color: white;
  background-image: url('../images/hero-image3.jpg');
  background-position: 40% 50%;
  background-repeat: no-repeat;
  background-size: cover;
  min-height: 70vh;
  /*margin-top: -48px;*/
  margin-bottom: 0px;
}

/* --------------- Buttons ----------------- */

.btn {
  padding: 6px 12px;
}

.btn-sm {
  padding: 4px 8px;
}

.search-btn {
  background: #566465;
  color: #FFFFFF;
  border-radius: 25px;
}

.product-review {
  margin-bottom: 20px;
}

.fa-shopping-cart:before,
.cart-count,
.search-nav {
  color: #566465;
}

.badge {
  border-radius: 25px;
}

.shop-now-button-hero {
  background: #FFFFFF;
  color: #566465;
  min-width: 150px;
  font-weight: bold;
  border: 1px solid #FFFFFF;
  border-radius: 5px;
}

.btn-ua-grey {
  background: #4B5657;
  color: white;
  border: 1px solid #4B5657;
  border-radius: 25px;
}

.auth-btn-ua-grey {
  background: #4B5657;
  color: white !important;
  /* to override allauth style */
  border: 1px solid #4B5657 !important;
  /* to override allauth style */
  border-radius: 25px !important;
  /* to override allauth style */
}

.btn-ua-grey-increment {
  background: #4B5657;
  color: white;
  border: 0px;
  border-radius: 0px 25px 25px 0px !important;
}

.btn-ua-grey-decrement {
  background: #4B5657;
  color: white !important;
  border: 0px;
  border-radius: 25px 0px 0px 25px !important;
}

.btn-ua-grey:hover,
.btn-ua-grey:active,
.btn-ua-grey:focus,
.auth-btn-ua-grey:hover,
.auth-btn-ua-grey:active,
.auth-btn-ua-grey:focus,
.search-btn:hover,
.search-btn:active,
.search-btn:focus,
.btn-ua-grey-increment:hover,
.btn-ua-grey-increment:active,
.btn-ua-grey-increment:focus,
.btn-ua-grey-decrement:hover,
.btn-ua-grey-decrement:active,
.btn-ua-grey-decrement:focus {
  background: #000000;
  color: #FFFFFF !important;
  border: 0px;
}

.shop-now-button-hero:hover,
.shop-now-button-hero:active,
.shop-now-button-hero:focus {
  background: #FF4D02;
  color: #FFFFFF;
  font-weight: bold;
  border: 1px solid #FF4D02;
}

.btn-outline-ua-grey {
  background: white;
  color: #4B5657 !important;
  border: 1px solid #4B5657;
  border-radius: 25px;
}

.auth-btn-outline-ua-grey {
  background: white;
  color: #4B5657 !important;
  border: 1px solid #4B5657;
  border-radius: 25px;
}

.btn-outline-ua-grey:hover,
.btn-outline-ua-grey:active,
.btn-outline-ua-grey:focus,
.auth-btn-outline-ua-grey:hover,
.auth-btn-outline-ua-grey:active,
.auth-btn-outline-ua-grey:focus {
  background: #4B5657;
  color: #FFFFFF !important;
  border: 1px solid #4B5657;
}

.primaryAction {
  background: #4B5657 !important;
  border: 1px solid #4B5657 !important;
  border-radius: 25px !important;
}

.primaryAction:hover,
.primaryAction:active,
.primaryAction:focus {
  background: #000000 !important;
  border: 1px solid #000000 !important;
}

/* --------------- Profile -----------------*/

.table thead th {
  color: #4B5657;
}

/* --------------- General -----------------*/

.text-uppercase {
  letter-spacing: .2em;
}

.clickable {
  cursor: pointer;
}

.product-menu {
  position: static !important;
}

.modal {
  max-width: 250px;
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translateX(-50%);
  transform: translateX(-50%);
}

.table {
  color: #4B5657;
}

html {
  scroll-behavior: smooth;
}

/* ------------ Navigation ----------- */

.product-menu .product-menu-contained {
  padding: 20px;
  width: 100%;
  max-width: 2000px;
  left: 50%;
  -webkit-transform: translateX(-50%);
  transform: translateX(-50%);
  margin-top: -1px;
}

.product-menu a.nav-link {
  padding: 7px !important;
  padding-left: 0 !important;
}

.account-menu .account-menu-contained {
  padding: 20px;
  max-width: 250px;
  margin-top: -1px;
}

.logo-lg {
  width: 240px;
  height: 58px;
}

.logo-sm {
  width: 161px;
  height: 39px;
}

/* ------------------- Top Banner ----------------------- */

#top-banner {
  background: #4B5657;
  padding: 30px 0;
}

#top-banner .offer {
  color: #FFFFFF;
}

#top-banner .offer .btn {
  text-transform: uppercase;
  letter-spacing: 0.1em;
  max-width: 400px;
}

#top-banner a {
  color: #FFFFFF;
}

/* -------------------- Product Form ---------------------- */

.btn-file {
  position: relative;
  overflow: hidden;
}

.btn-file input[type="file"] {
  position: absolute;
  top: 0;
  right: 0;
  min-width: 100%;
  min-height: 100%;
  opacity: 0;
  cursor: pointer;
}

.custom-checkbox .custom-control-label::before {
  border-radius: 5px;
  border-color: #DC3545;
}

.custom-checkbox .custom-control-input:checked~.custom-control-label::before {
  border-radius: 5px;
  background-color: #DC3545;
  border-color: #DC3545;
}

/* -------------------- Navbar ---------------------- */

.navbar {
  background-color: #FFFFFF;
  padding-left: 10px;
  padding-right: 10px;
  padding-bottom: 0px;
  padding-top: 0px !important;
}

.navbar-brand {
  padding-bottom: 23px;
}

.navbar .navbar-nav>.nav-item>.nav-link {
  text-transform: uppercase;
  letter-spacing: 0.1em;
  font-weight: 700;
  padding: 30px 15px !important;
  color: #566465;
}

@media (max-width: 992px) {
  .navbar .navbar-nav>.nav-item>.nav-link {
    padding: 10px 15px !important;
  }
}

.navbar .navbar-nav>.nav-item>.nav-link.active,
.navbar .navbar-nav>.nav-item>.nav-link:hover,
.navbar .navbar-nav>.nav-item>.nav-link:focus {
  background: #D3D3D3;
}

@media (max-width: 992px) {
  .navbar .dropdown-menu {
    position: relative !important;
    border: none;
  }
}

@media (min-width: 992px) {
  .navbar .dropdown:hover .dropdown-menu {
    display: block;
  }
}

.navbar .product-menu-contained {
  padding-right: 30px !important;
  padding-left: 30px !important;
  padding-top: 30px !important;
  padding-bottom: 0px !important;
  -webkit-box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
}
/* ... */

